--- a/client/src/views/Mentor/Classroom/Classroom.less
+++ b/client/src/views/Mentor/Classroom/Classroom.less
@@ -4,7 +4,7 @@
   margin: 0 0 1vh 5vw;
 
   div {
-    color: #colors[text-secondary];
+    color: #colors[text-secondary] ;
     font-weight: bolder;
   }
   #classroom {
@@ -18,25 +18,26 @@
 .ant-tabs-nav-wrap,
 .ant-tabs-nav {
   margin: auto 5vw;
+  color: #ffffff ;
 }
 
-.ant-tabs-tab {
+.-tab {
   min-width: 10vw;
   justify-content: center;
-  color: #colors[tertiary] !important;
+  color: #4ea0d3 !important;
 
   &:hover {
-    color: #colors[tertiary];
+    color: #colors[tertiary] ;
     opacity: 0.6;
   }
 }
 
 .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
-  color: #colors[secondary] !important;
+  color: #ffffff !important;
 
   &:hover {
-    color: #colors[secondary];
-    opacity: 0.6;
+    //opacity: 0.9;
+    color:#FFFFFF;
   }
 }
 
