--- a/client/src/views/Mentor/Classroom/ViewBadges/ViewBadges.less
+++ b/client/src/views/Mentor/Classroom/ViewBadges/ViewBadges.less
@@ -8,36 +8,77 @@
 // Handles the visible pane size and styling
 .view-badge-container {
     position: relative;
-    margin: 6vh auto 5vh auto;
-    padding: 5vh 5vw;
+    margin: 1em auto 5em auto;
+    padding: 4em 3em;
     width: 80vw;
     height: 1000px;
     //height: auto;
     background: rgb(233, 233, 233);
-    border-radius: 5px;
-    border: 2px solid #00a2ff8a;
+    border-radius: 25px;
+    border: 5px solid #2a4668;
 }
 
 // Styling for button for adding new badges
 #add-new-button {
-    position: fixed;
-    background-color: rgb(100,200,100);
-    width: 60px;
-    height: 60px;
-    
-    
-    top: 220px;
-    right: 185px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #75da75;
+    width: 1.25em;
+    height: 1.25em;
+    top: .2em;
+    right: 0.2em;
+    //line-height: em;
+    font-size: 2.5em;
+    border-radius: 20%;
+    border: 3px solid #0000005d;
+    outline: 2px solid #00000017;
+    padding: 0em 0em 0em .1em;
+    //margin: 0;
+    transition: transform .8s ease, background-color .8s ease;
 }
+#add-new-button:hover {
+    transform: scale(1.02);
+    transition: transform .2s ease, background-color .2s ease;
+    background-color: #4b8b4a;
+}
+#add-new-button img {
+    width: 80%;  /* Adjusts the width of the image to 50% of the button's width */
+    height: auto; /* Maintains the aspect ratio of the image */
+    //display: block; /* Optional: to remove any extra space around the image */
+}
+
 
 // Styling for button for removing badges
 #remove-button {
-    width: 60px;
-    height: 60px;
-    background-color: rgb(200,50,50);
-    position: fixed;
-    top: 220px;
-    right: 250px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e06565;
+    width: 1.25em;
+    height: 1.25em;
+    top: .2em;
+    right: 2.2em;
+    //line-height: em;
+    font-size: 2.5em;
+    border-radius: 20%;
+    border: 3px solid #0000005d;
+    outline: 2px solid #00000017;
+    transition: transform .8s ease, background-color .8s ease;
+}
+
+#remove-button:hover {
+    transform: scale(1.02);
+    transition: transform .2s ease, background-color .2s ease;
+    background-color: #8e4140;
+    //border: #8e4140;
+}
+#remove-button img {
+    width: 100%;  /* Adjusts the width of the image to 50% of the button's width */
+    height: auto; /* Maintains the aspect ratio of the image */
+    //display: block; /* Optional: to remove any extra space around the image */
 }
 
 h3 {
